--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -5,23 +5,21 @@
 .header-container {
   margin: 0 auto;
 
-  background-color: $dash;
+  background-color: $white;
   width: 100%;
-  height: 200px;
+  height: 65px;
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
-  padding-top: 1.5rem;
-  border-radius: 0 0 15px 15px;
-  border-top: 0;
+  border-bottom: 2px solid $border;
 
   .header-elm {
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
+    align-items: center;
     justify-content: space-between;
-    color: $white;
-    width: 90%;
+    color: $dash;
+    width: 900px;
 
     @include b.breakpoint("1440") {
       width: 1080px;
@@ -29,32 +27,69 @@
     @include b.breakpoint("1680") {
       width: 1280px;
     }
+
+    button {
+      background-color: #0176fb18;
+      color: $accent;
+      text-transform: capitalize;
+      display: flex;
+      flex-direction: row;
+      gap: 0.5rem;
+      min-height: 2.5rem;
+      height: 2.5rem;
+    }
   }
 
   h2 {
     font-size: 24px;
     font-weight: 500;
   }
+}
 
-  button {
-    display: none;
+.page-title {
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+  align-items: center;
+  justify-content: center;
+  font-size: 22px;
 
-    @include b.breakpoint("1280") {
-      display: block;
+  h2 {
+    font-size: 20px;
+    color: #a5b4cb;
+  }
+}
+
+.right-side {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+
+  .user-icon {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+    cursor: pointer;
+
+    svg {
+      margin-left: -5px;
     }
   }
 
-  .mobile-menu-icon {
-    display: block;
-    font-size: 37px;
+  .user-img {
+    width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: auto 0;
-    cursor: pointer;
 
-    @include b.breakpoint("1280") {
-      display: none;
+    img {
+      width: 30px;
+      height: 30px;
+      border-radius: 50%;
+      object-fit: cover;
     }
   }
 }
