--- a/src/styles/global/_variables.scss
+++ b/src/styles/global/_variables.scss
@@ -1,5 +1,6 @@
-$background: #eaecf0;
+$background: #fff;
 $white: #fff;
-$second: #97979b;
-$accent: #385dff;
-$dash: #2a303c;
+$border: #e3eaf4;
+$second: #141736;
+$accent: #0177fb;
+$dash: #141736;
