--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,5 @@
-@import "./global/general", "../pages/Home/home", "../pages/NotFound/notfound",
-  "../components/Header/header", "../components/Sidebar/sidebar",
-  "../components/Sidemenu/sidemenu", "../pages/Login/login",
-  "../pages/Register/register";
+@import "./global/general", "../pages/Login/login", "../pages/Home/home",
+  "../pages/NewSearch/new-search", "../pages/SingleSearch/single-search",
+  "../pages/Account/account", "../pages/404/notFound",
+  "../pages/Settings/settings", "../components/Sidebar/sidebar",
+  "../components/Header/header", "../components/Table/table";
