--- a/src/pages/Login/_login.scss
+++ b/src/pages/Login/_login.scss
@@ -1,9 +1,8 @@
 //imports
-@use "../../styles/global/breakpoints" as b;
 @import "../../styles/global/variables";
 
 .login-f {
-  background-color: #f4f4f4;
+  background-color: $dash;
   position: absolute;
   top: 0;
   left: 0;
@@ -13,8 +12,7 @@
 
 .login-container {
   background-color: $white;
-  width: 90%;
-  box-shadow: 0 0 10px 5px rgba(16, 16, 29, 0.122);
+  width: 400px;
 
   position: absolute;
   top: 50%;
@@ -23,10 +21,6 @@
   padding: 2.5rem 1.8rem;
   border-radius: 15px;
 
-  @include b.breakpoint("768") {
-    width: 400px;
-  }
-
   .heading {
     margin-bottom: 2rem;
     color: #252733;
@@ -34,12 +28,6 @@
 
     h1 {
       font-size: 30px;
-    }
-    img {
-      width: 70% !important;
-      height: auto;
-      margin: 0 auto;
-      margin-bottom: 10px;
     }
   }
 
@@ -64,28 +52,5 @@
     button {
       margin-top: 1rem;
     }
-  }
-}
-
-.other-links {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  margin-top: 1.5rem;
-  gap: 0.3rem;
-
-  .quick {
-    width: 100%;
-    display: flex;
-    gap: 0.5rem;
-    a {
-      color: $accent;
-    }
-  }
-
-  a {
-    color: #252733;
-    font-size: 14px;
-    text-decoration: none;
   }
 }
