--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -3,8 +3,29 @@
 @tailwind utilities;
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap");
 
+@font-face {
+  font-family: "Gilroy";
+  font-weight: 700;
+  src: url("../../public/fonts/gilroy/Gilroy-Bold.woff");
+}
+@font-face {
+  font-family: "Gilroy";
+  font-weight: 600;
+  src: url("../../public/fonts/gilroy/Gilroy-SemiBold.woff");
+}
+@font-face {
+  font-family: "Gilroy";
+  font-weight: 500;
+  src: url("../../public/fonts/gilroy/Gilroy-Medium.woff");
+}
+@font-face {
+  font-family: "Gilroy";
+  font-weight: 400;
+  src: url("../../public/fonts/gilroy/Gilroy-Light.woff");
+}
+
 @layer base {
   html {
-    font-family: Poppins, system-ui, sans-serif;
+    font-family: Gilroy, system-ui, sans-serif;
   }
 }
