--- a/src/components/Table/_table.scss
+++ b/src/components/Table/_table.scss
@@ -11,17 +11,14 @@ table {
   }
   thead {
     th {
-      background-color: $white !important;
+      background-color: #f9fafb !important;
       border-bottom: 1px solid #8b8b8b35;
     }
   }
+  tr:nth-child(even) td {
+    background-color: #f9fafb !important;
+  }
   tbody {
-    tr,
-    td,
-    th {
-      background-color: #f9fafb !important;
-    }
-
     tr {
       border-bottom: 1px solid #8b8b8b35;
       &:last-child {
@@ -63,11 +60,11 @@ table {
         font-size: 15px;
       }
     }
-    .changed {
-      background-color: $white;
-      border: 5px solid white;
-      color: $dash;
-    }
+    // .changed {
+    //   background-color: $white;
+    //   border: 5px solid white;
+    //   color: $dash;
+    // }
     p {
       font-size: 15px;
     }
@@ -95,7 +92,7 @@ table {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0.9rem 1rem;
+  padding: 0.9rem 0rem;
   border-top: 1px solid #8b8b8b35;
 
   .elms {
@@ -116,10 +113,10 @@ table {
 
 // search bar on restricted pages
 .expand-search {
-  grid-template-columns: 1fr 1fr !important;
+  // grid-template-columns: 1fr 1fr !important;
 
   .actions {
-    padding-left: 1rem;
+    // padding-left: 1rem;
 
     svg {
       pointer-events: none;
@@ -130,4 +127,25 @@ table {
 
 .small-remove {
   text-transform: capitalize !important;
+}
+
+.nodata {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.7rem;
+  padding-bottom: 2.5rem;
+  padding-top: 1rem;
+
+  img {
+    width: 300px;
+    height: auto;
+    object-fit: contain;
+  }
+  h3 {
+    font-size: 20px;
+    font-weight: 500;
+    text-transform: capitalize;
+  }
 }
