--- a/src/pages/SingleSearch/_single-search.scss
+++ b/src/pages/SingleSearch/_single-search.scss
@@ -1,9 +1,89 @@
 //imports
 @import "../../styles/global/variables";
 
-.single-seach-container {
+.single-search-container {
   // width: 700px;
   // margin: 0 auto;
 
-  margin-bottom: 5rem;
+  margin-bottom: 10rem;
+
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  gap: 2rem;
+
+  .single-search-resume {
+    background-color: $white;
+    box-shadow: 0 10px 10px 10px #8b8b8b13;
+    padding: 1rem;
+    overflow: hidden;
+    border-radius: 10px;
+    transition: all 0.2s ease-in-out;
+    height: fit-content;
+
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+    h2 {
+      font-size: 17px;
+      font-weight: 700;
+    }
+
+    ul {
+      display: flex;
+      flex-direction: column;
+      gap: 0.8rem;
+
+      li {
+        list-style: square;
+        margin-left: 1rem;
+        p {
+          font-size: 14px;
+
+          span {
+            color: $accent;
+            font-weight: 700;
+          }
+        }
+      }
+    }
+  }
+}
+
+.next-buttons {
+  position: fixed;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: $white;
+  box-shadow: 0 -20px 10px 10px #8b8b8b17;
+  padding: 1rem;
+  overflow: hidden;
+  border-radius: 10px 10px 0 0;
+
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+  border: 4px solid $border;
+  border-bottom: none;
+}
+
+.visit-link {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 3px;
+  font-size: 15px;
+  background-color: rgba(1, 118, 251, 0.0941176471);
+  padding: 5px 7px;
+  border-radius: 50px;
+  color: $accent;
+
+  text-transform: capitalize;
+  border: none;
+
+  &:hover {
+    color: $white;
+  }
 }
