--- a/src/styles/global/_general.scss
+++ b/src/styles/global/_general.scss
@@ -56,7 +56,7 @@ body {
 .centerer {
   width: 900px;
   margin: 0 auto;
-  margin-top: 2.5rem;
+  margin-top: 1.7rem;
 
   @include b.breakpoint("1440") {
     width: 1080px;
@@ -113,4 +113,75 @@ body {
     font-size: 15px;
     cursor: pointer;
   }
+}
+
+.popups {
+  form {
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 0.7rem;
+
+    .form-group {
+      display: flex;
+      flex-direction: column;
+      gap: 0.3rem;
+    }
+  }
+}
+
+.back-btn {
+  display: flex;
+  flex-direction: row;
+  gap: 5px;
+  align-items: center;
+  cursor: pointer;
+  box-shadow: 0 10px 10px 10px #8b8b8b13;
+  width: fit-content;
+  padding: 3px 5px;
+  border-radius: 10px;
+  border-bottom: 1px solid $accent;
+}
+
+.form-page {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10rem;
+
+  h1 {
+    font-size: 20px;
+    font-weight: 700;
+    text-align: center;
+  }
+
+  form {
+    width: 600px;
+    padding: 1.5rem;
+    box-shadow: 0 10px 10px 10px #8b8b8b13;
+    margin: 0 auto;
+    border-radius: 10px;
+    margin-top: 1rem;
+
+    .big-group {
+      display: flex;
+      flex-direction: column;
+      gap: 0.7rem;
+
+      .form-group {
+        display: flex;
+        flex-direction: column;
+        gap: 0.3rem;
+      }
+      .btns {
+        display: flex;
+        flex-direction: column;
+        gap: 0.7rem;
+        margin-top: 0.7rem;
+      }
+    }
+  }
+}
+
+.btn-capitilized {
+  text-transform: capitalize !important;
 }
