--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,7 @@
 @import "./global/general", "../pages/Login/login", "../pages/Home/home",
   "../pages/NewSearch/new-search", "../pages/SingleSearch/single-search",
   "../pages/Account/account", "../pages/404/notFound",
-  "../pages/Settings/settings", "../components/Sidebar/sidebar",
-  "../components/Header/header", "../components/Table/table";
+  "../pages/Settings/accounts/accounts", "../pages/Settings/Profiles/profiles",
+  "../pages/Linkedin/linkedin", "../pages/Settings/settings",
+  "../components/Sidebar/sidebar", "../components/Header/header",
+  "../components/Table/table";
