account feature added

--- a/src/pages/Settings/Profiles/_profiles.scss
+++ b/src/pages/Settings/Profiles/_profiles.scss
@@ -12,6 +12,10 @@
 }
 
 .new-profile-form {
+  width: 700px !important;
+}
+
+.account-details-form {
   width: 100% !important;
   display: grid;
   grid-template-columns: 1fr 1fr;
