profiles and account crud actions

--- a/src/pages/Settings/Accounts/_accounts.scss
+++ b/src/pages/Settings/Accounts/_accounts.scss
@@ -61,6 +61,10 @@
       margin-top: 0.5rem;
       justify-content: flex-start;
       align-items: flex-start;
+
+      p.title {
+        text-transform: capitalize;
+      }
     }
   }
 
